examples/test/testpolicy5394.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5394
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key20: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value20
          key15: value7
          key2: value38
      podSelector:
        matchLabels:
          key37: value30
